--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.4",
     "axios-cache-interceptor": "^1.7.0",
     "class-variance-authority": "^0.7.1",
