--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.486.0",
     "motion": "^12.6.3",
-    "next": "15.2.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
